@@ -21,19 +21,14 @@ CMusicInfoTagLoaderFactory::~CMusicInfoTagLoaderFactory()
 
 IMusicInfoTagLoader* CMusicInfoTagLoaderFactory::CreateLoader(const CStdString& strFileName)
 {
+  // dont try to locate a folder.jpg for streams &  shoutcast
+	if (CUtil::IsInternetStream(strFileName))
+		return NULL;
+
 	CStdString strExtension;
 	CUtil::GetExtension( strFileName, strExtension);
 	strExtension.ToLower();
-  CURL url(strFileName);
 
-  // dont try to locate a folder.jpg for streams &  shoutcast
-  if (url.GetProtocol() =="http" || url.GetProtocol()=="HTTP") return NULL;
-  if (url.GetProtocol() =="shout" || url.GetProtocol()=="SHOUT") return NULL;
-  if (url.GetProtocol() =="mms" || url.GetProtocol()=="MMS") return NULL;
-  if (url.GetProtocol() =="udp" || url.GetProtocol()=="UDP") return NULL;
-  if (url.GetProtocol() =="ftp" || url.GetProtocol()=="FTP") return NULL;
-  if (url.GetProtocol() =="rtp" || url.GetProtocol()=="RTP") return NULL;
-  if (url.GetProtocol() =="rtsp" || url.GetProtocol()=="RTSP") return NULL;
 	if (strExtension==".mp3")
 	{
 		CMusicInfoTagLoaderMP3 *pTagLoader= new CMusicInfoTagLoaderMP3();
